Added bg and image

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+body{
+    background: 
+    linear-gradient(to top, #130751ba, #9005eccc),
+        url(./img/bg-texture.jpg);
+    @apply bg-no-repeat bg-center bg-cover;
+}
