--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,7 +8,7 @@
 body{
     background: 
     linear-gradient(to top, #25040528, #340156),
-        url(./img/bg-texture.jpg);
+        url(./img/bg-texture.webp);
     @apply bg-no-repeat bg-center bg-cover;
 
 }
